Estendendo a documentação para os endpoints restantes