@@ -6,30 +6,32 @@ import com.course.springfood.api.assembler.PedidoResumoModelAssembler;
 import com.course.springfood.api.model.PedidoModel;
 import com.course.springfood.api.model.PedidoResumoModel;
 import com.course.springfood.api.model.input.PedidoInput;
+import com.course.springfood.api.openapi.controller.PedidoControllerOpenApi;
 import com.course.springfood.core.data.PageableTranslator;
 import com.course.springfood.domain.exception.EntidadeNaoEncontradaException;
 import com.course.springfood.domain.exception.NegocioException;
+import com.course.springfood.domain.filter.PedidoFilter;
 import com.course.springfood.domain.model.Pedido;
 import com.course.springfood.domain.model.Usuario;
 import com.course.springfood.domain.repository.PedidoRepository;
-import com.course.springfood.domain.filter.PedidoFilter;
 import com.course.springfood.domain.service.EmissaoPedidoService;
 import com.course.springfood.infrastructure.repository.spec.PedidoSpecs;
-import com.google.common.collect.ImmutableMap;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @RequestMapping(value = "/pedidos")
-public class PedidoController {
+public class PedidoController implements PedidoControllerOpenApi{
 
     @Autowired
     private PedidoRepository pedidoRepository;
@@ -46,7 +48,8 @@ public class PedidoController {
     @Autowired
     private PedidoInputDisassembler pedidoInputDisassembler;
 
-    @GetMapping
+    @Override
+    @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
     public Page<PedidoResumoModel> pesquisar(PedidoFilter filtro,
                                              @PageableDefault(size = 10) Pageable pageable) {
         pageable = traduzirPageable(pageable);
@@ -63,7 +66,8 @@ public class PedidoController {
         return pedidosResumoModelPage;
     }
 
-    @PostMapping
+    @Override
+    @PostMapping(produces = MediaType.APPLICATION_JSON_VALUE)
     @ResponseStatus(HttpStatus.CREATED)
     public PedidoModel adicionar(@Valid @RequestBody PedidoInput pedidoInput) {
         try {
@@ -81,7 +85,8 @@ public class PedidoController {
         }
     }
 
-    @GetMapping("/{codigoPedido}")
+    @Override
+    @GetMapping(value = "/{codigoPedido}", produces = MediaType.APPLICATION_JSON_VALUE)
     public PedidoModel buscar(@PathVariable String codigoPedido) {
         Pedido pedido = emissaoPedido.buscarOuFalhar(codigoPedido);
 
@@ -89,11 +94,16 @@ public class PedidoController {
     }
 
     private Pageable traduzirPageable(Pageable apiPageable) {
-        var mapeamento = ImmutableMap.of(
+        var mapeamento = Map.of(
                 "codigo", "codigo",
+                "subtotal", "subtotal",
+                "taxaFrete", "taxaFrete",
+                "valorTotal", "valorTotal",
+                "dataCriacao", "dataCriacao",
                 "restaurante.nome", "restaurante.nome",
-                "nomeCliente", "cliente.nome",
-                "valorTotal", "valorTotal"
+                "restaurante.id", "restaurante.id",
+                "cliente.id", "cliente.id",
+                "cliente.nome", "cliente.nome"
         );
 
         return PageableTranslator.translate(apiPageable, mapeamento);
